--- a/pages/intermedioPage/programacao2.html
+++ b/pages/intermedioPage/programacao2.html
@@ -74,6 +74,90 @@
           </div>
         </div>
       </header>
+      <div class="containerText">
+        <h3 class="titleContainerText">Linguagem de Programação II</h3>
+        <p class="paragraphContainerText">
+          <strong>Linguagem C</strong> <br />
+          A linguagem de programação C é uma linguagem de alto nível, de uso
+          geral e estruturada, desenvolvida por Dennis Ritchie na década de
+          1970, no Bell Labs. Ela é amplamente utilizada em sistemas
+          operacionais, aplicações embarcadas, drivers, aplicativos de desktop e
+          muito mais.
+
+          <br />
+          <br />A linguagem C é conhecida por ser flexível, eficiente e de baixo
+          nível, o que a torna ideal para desenvolvimento de sistemas e
+          aplicativos de alto desempenho. Ela possui uma sintaxe simples e uma
+          estrutura de programação clara, o que facilita a compreensão e a
+          manutenção do código.
+
+          <br />
+          <br />A linguagem C oferece recursos de programação avançada, como
+          ponteiros, estruturas de dados, funções, tipos de dados personalizados
+          e gerenciamento de memória. Isso permite ao programador ter um
+          controle preciso sobre como os dados são armazenados e manipulados, o
+          que é essencial para desenvolvimento de sistemas e aplicativos de alto
+          desempenho.
+
+          <br />
+          <br />A linguagem C é amplamente utilizada em sistemas operacionais
+          como o Linux, UNIX e Windows, além de ser utilizada em muitas outras
+          áreas, como desenvolvimento de jogos, aplicativos de edição de vídeo e
+          áudio, e aplicativos de processamento de imagem. <br />
+          <strong>Aqui estão alguns exemplos de códigos na linguagem C:</strong>
+          <br />
+          <ol>
+            <li>Exemplo de um programa "Hello World": <br> <br>
+<div class="codExamples">            #include &lt;stdio.h&gt; <br>
+  <br>
+                int main()
+                <br>
+                {<br>
+                    printf("Hello World!\n"); <br>
+                    return 0;<Br>
+                }</div>
+            </li>
+            <br>
+            <li >Exemplo de uso de variáveis: <br> <br>
+           <div class="codExamples">   #include &lt;stdio.h&gt; <br> <br>
+
+            int main() <br>
+            { <br>
+                int num1, num2, soma; <br>
+                num1 = 10; <br>
+                num2 = 20; <br>
+                soma = num1 + num2; <br>
+                printf("A soma de %d e %d é %d\n", num1, num2, soma);<br>
+                return 0; <br>
+            }</div>
+
+            </li>
+            <br>
+            <li>Exemplo de uso de funções: <br> <br>
+              <div class="codExamples">
+                #include &lt;stdio.h&gt; <br><br>
+
+                  int somar(int x, int y) <br>
+                  {<br>
+                      return x + y;<br>
+                  }<br>
+                  
+                  int main()<br>
+                  {<br>
+                      int num1 = 10, num2 = 20;<br>
+                      int resultado = somar(num1, num2);<br>
+                      printf("A soma de %d e %d é %d\n", num1, num2, resultado);<br>
+                      return 0;<br>
+                  }<br>
+                  
+              </div>
+
+
+            </li>
+          </ol>
+          Esses são alguns exemplos básicos de códigos na linguagem C, mas existem muitas outras possibilidades e recursos disponíveis na linguagem. É importante lembrar que o uso de boas práticas de programação, como comentários e nomenclatura de variáveis, é fundamental para garantir a legibilidade e manutenção do código.
+        </p>
+      </div>
     </div>
   </body>
 </html>
