--- a/pages/intermedioPage/redes.html
+++ b/pages/intermedioPage/redes.html
@@ -74,6 +74,215 @@
           </div>
         </div>
       </header>
+      <div class="containerText">
+        <h3 class="titleContainerText">Redes de Computadores</h3>
+        <p class="paragraphContainerText">
+          <strong>Introdução</strong> <br />
+          As redes de computadores são conjuntos de dispositivos conectados
+          entre si para compartilhar informações e recursos, como arquivos,
+          impressoras e acesso à internet. Elas permitem que os usuários
+          compartilhem informações e colaborem uns com os outros,
+          independentemente de onde estejam localizados.
+
+          <br /><br />Existem vários tipos de redes de computadores, como redes
+          locais (LAN), redes de área ampla (WAN), redes de área global (GAN) e
+          redes de computadores sem fio (WLAN). Cada tipo de rede tem suas
+          próprias características e usos específicos.
+
+          <br /><br />As redes locais (LAN) são usadas principalmente em
+          ambientes de escritório e empresariais, e conectam computadores e
+          outros dispositivos em uma área geográfica limitada, como uma sala de
+          aula ou um prédio de escritórios.
+
+          <br /><br />As redes de área ampla (WAN) conectam computadores e
+          dispositivos em áreas geográficas maiores, como cidades ou estados, e
+          são geralmente usadas para conectar escritórios em diferentes locais.
+
+          <br /><br />As redes de área global (GAN) são as maiores redes de
+          computadores e conectam dispositivos em todo o mundo, como a internet.
+
+          <br /><br />As redes de computadores sem fio (WLAN) utilizam ondas de
+          rádio para conectar dispositivos sem a necessidade de cabos físicos, o
+          que permite maior flexibilidade e mobilidade.
+
+          <br /><br />As redes de computadores são fundamentais para o
+          funcionamento da maioria das empresas e organizações modernas e também
+          são cada vez mais importantes na vida pessoal das pessoas.
+        </p>
+        <h3 class="titleContainerText">Comunicação de Dados</h3>
+        <p class="paragraphContainerText">
+          <br />
+          <br />
+          A comunicação de dados nas redes é o processo pelo qual os dados são
+          transmitidos entre dispositivos conectados a uma rede. Existem vários
+          protocolos e padrões utilizados para garantir que a comunicação de
+          dados seja confiável e eficiente.
+
+          <br />
+          <br />O protocolo de comunicação de dados mais comum é o TCP/IP
+          (Transmission Control Protocol/Internet Protocol). Este protocolo é o
+          padrão para a comunicação de dados na internet e em outras redes
+          globais. Ele é composto por várias camadas, cada uma responsável por
+          uma função específica na comunicação de dados.
+
+          <br />
+          <br />A camada de transporte (TCP) é responsável por garantir que os
+          dados sejam transmitidos de forma confiável, detectando e corrigindo
+          erros e garantindo que os dados sejam entregues na ordem correta. A
+          camada de rede (IP) é responsável por rotear os dados entre
+          dispositivos na rede.
+
+          <br />
+          <br />Outros protocolos comuns incluem o UDP (User Datagram Protocol),
+          que é semelhante ao TCP, mas não garante que os dados sejam entregues
+          na ordem correta ou sem erros, e o FTP (File Transfer Protocol), que é
+          usado para transferir arquivos entre dispositivos na rede.
+
+          <br />
+          <br />Além dos protocolos de comunicação de dados, existem também
+          outros padrões e tecnologias utilizadas para garantir a segurança e a
+          eficiência da comunicação de dados, tais como encriptação, firewalls,
+          e tecnologias de roteamento.
+
+          <br />
+          <br />Em resumo, a comunicação de dados nas redes é um processo
+          complexo que envolve vários protocolos e padrões para garantir que os
+          dados sejam transmitidos de forma confiável e eficiente entre
+          dispositivos conectados a uma rede.
+        </p>
+        <p class="paragraphContainerText">
+          <strong
+            >Os agentes que compõem o processo de comunicação de dados em uma
+            rede incluem:</strong
+          >
+          <br />
+          Dispositivos de rede: Estes são os dispositivos físicos que conectam
+          os computadores e outros dispositivos na rede, incluindo hubs,
+          switches, roteadores e modems.
+
+          <br />
+          <br />Protocolos de comunicação: Estes são os conjuntos de regras e
+          padrões que governam a comunicação de dados na rede, incluindo TCP/IP,
+          UDP e FTP.
+
+          <br />
+          <br />Software de rede: Este é o software que gerencia e controla a
+          comunicação de dados na rede, incluindo sistemas operacionais,
+          softwares de gerenciamento de rede e programas de aplicativo.
+
+          <br />
+          <br />Aplicativos: Estes são os programas que os usuários usam para
+          enviar e receber dados na rede, incluindo navegadores, clientes de
+          email, programas de mensagens instantâneas e aplicativos de
+          compartilhamento de arquivos.
+
+          <br />
+          <br />Usuários finais: Essas são as pessoas que utilizam a rede para
+          enviar e receber dados, como funcionários de uma empresa, estudantes
+          em uma escola ou membros de uma família em casa.
+
+          <br />
+          <br />Serviços de rede: Estes são os serviços oferecidos pela rede,
+          como acesso à internet, armazenamento de arquivos e serviços de
+          impressão.
+
+          <br />
+          <br />Todos esses agentes trabalham juntos para permitir a comunicação
+          de dados confiável e eficiente na rede. As configurações e o
+          gerenciamento dos componentes de rede são importantes para garantir a
+          segurança e a estabilidade da comunicação de dados.
+        </p>
+        <h3 class="titleContainerText">Topologias de Rede</h3>
+        <p class="paragraphContainerText">
+          Existem várias topologias de rede diferentes, cada uma com suas
+          próprias vantagens e desvantagens.
+          <br />
+          <strong>Algumas das topologias de rede mais
+            comuns incluem:</strong>
+<li>Topologia em estrela: Nesta topologia, todos os dispositivos na rede estão conectados a um único dispositivo central, como um hub ou um switch. Isso permite que o tráfego de rede seja controlado e gerenciado de forma eficiente, mas se o dispositivo central falhar, a rede inteira ficará inoperável.</li>
+<li>Topologia em anel: Nesta topologia, os dispositivos estão conectados uns aos outros em uma configuração circular, onde cada dispositivo passa o tráfego para o próximo dispositivo. Isso permite que o tráfego de rede seja transmitido de forma confiável, mas se um dispositivo falhar, toda a rede ficará inoperável.</li>
+<li>Topologia em árvore: Nesta topologia, os dispositivos estão conectados em uma hierarquia, onde os dispositivos no topo da árvore são conectados a vários dispositivos abaixo deles. Isso permite que a rede seja escalável e fácil de gerenciar, mas se um dispositivo no topo da árvore falhar, vários outros dispositivos ficarão inoperáveis.</li>
+<li>Topologia em barramento: Nesta topologia, todos os dispositivos estão conectados a uma única linha física, chamada de barramento. Isso permite que a rede seja fácil de instalar e configurar, mas se a linha de barramento falhar, toda a rede ficará inoperável.</li>
+<li>Topologia em malha: Nesta topologia, cada dispositivo tem uma conexão direta com vários outros dispositivos. Isso permite que a rede seja altamente confiável e escalável, mas é mais cara e complexa de instalar e gerenciar.</li>
+        </p>
+        <h3 class="titleContainerText">Cabos de Rede</h3>
+        <p class="paragraphContainerText">
+          Os cabos de rede são utilizados para conectar dispositivos de rede,
+          como computadores, hubs, switches e roteadores. Existem vários tipos
+          de cabos de rede, cada um com características e usos específicos.
+          <br />
+          <strong>Alguns dos principais tipos de cabos de rede incluem:</strong>
+          <br>
+          <ul>
+            <li>Cabo de par trançado (UTP): Este é o tipo de cabo mais comum utilizado em redes locais (LAN). Ele é composto por vários pares de fios trançados, cada um dos quais é usado para transmitir e receber sinais. O cabo UTP é flexível, fácil de instalar e é suportado por uma ampla gama de dispositivos de rede.
+
+            </li>
+            <li>Cabo de fibra óptica: Este tipo de cabo é composto por fios de vidro ou plástico que usam luz para transmitir sinais. Ele é mais resistente a interferências eletromagnéticas do que o cabo UTP e é capaz de transmitir dados a grandes distâncias. No entanto, é mais caro e difícil de instalar.</li>
+            <li>Cabo coaxial: Este tipo de cabo é composto por um condutor central cercado por uma camada isolante e uma camada protetora. Ele é usado principalmente em redes de televisão por cabo e é capaz de transmitir dados a grandes distâncias.</li>
+            <li>Cabo de par trançado de paridade (STP): É similar ao UTP mas tem uma camada adicional de blindagem. Ele é menos comum mas oferece maior segurança contra interferência eletromagnética.</li>
+            <li>Cabo de par trançado não blindado (UTP): É semelhante ao STP, mas não possui blindagem adicional. Ele é mais comum em redes menos críticas e menos propensas à interferência eletromagnética.</li>
+
+          </ul>
+          A escolha do tipo de cabo de rede dependerá das necessidades específicas da rede e do ambiente de trabalho. É importante certificar-se de que o cabo escolhido seja compatível com os dispositivos de rede e seja capaz de suportar as velocidades de dados necessárias.
+<br>
+<strong>Categorias do Cabo UTP</strong><br>
+Os cabos de par trançado UTP (Unshielded Twisted Pair) são classificados em categorias que determinam sua capacidade de velocidade e distância de transmissão. As categorias mais comuns são: <br> <br>
+
+<ul>
+  <li>Categoria 3 (CAT3): Este é o tipo mais antigo de cabo UTP e é capaz de suportar velocidades de até 10 Mbps em distâncias até 100 metros. Ele é usado principalmente em redes antigas e não é mais recomendado para uso em novas redes.</li>
+  <li>Categoria 5 (CAT5): Este é o tipo mais comum de cabo UTP e é capaz de suportar velocidades de até 100 Mbps em distâncias até 100 metros. Ele é amplamente utilizado em redes locais e pequenas empresas.</li>
+  <li>Categoria 5e (CAT5e): Este é uma versão melhorada do CAT5 e é capaz de suportar velocidades de até 1000 Mbps (1 Gbps) em distâncias até 100 metros. Ele é amplamente utilizado em redes de médio porte e empresas de médio porte.</li>
+  <li>Categoria 6 (CAT6): Este é o tipo mais recente de cabo UTP e é capaz de suportar velocidades de até 10 Gbps em distâncias até 55 metros. Ele é usado em redes de alta velocidade, como redes de dados e redes de voz e vídeo.</li>
+  <li>Categoria 6A (CAT6A): A categoria 6A é uma versão melhorada do CAT6 e é capaz de suportar velocidades de até 10 Gbps em distâncias até 100 metros. É utilizado em redes de alta velocidade e alta demanda como Data Centers, instalações de TI, entre outros.
+
+  </li>
+</ul>
+<br>
+É importante observar que a velocidade de transmissão real de um cabo UTP pode ser afetada por vários fatores, incluindo a qualidade do cabo, a configuração da rede e as condições ambientais.
+        </p>
+        <h3 class="titleContainerText">Modelo OSI</h3>
+        <p class="paragraphContainerText">
+          O modelo OSI (Modelo de Referência de Interconexão de Sistemas Aberto) é um modelo de referência desenvolvido pela ISO (Organização Internacional para Padronização) para descrever como as redes de computadores comunicam-se entre si. Ele é composto por sete camadas, cada uma com uma função específica na comunicação de dados.
+<ol>
+  <li>Camada física: Esta camada é responsável por transmitir os bits de dados ao longo dos cabos de rede. Ela define os padrões de cabo e conectores, bem como as regras para transmitir e receber sinais elétricos.</li>
+  <li>Camada de enlace de dados: Esta camada é responsável por garantir que os pacotes de dados sejam entregues corretamente entre dispositivos conectados diretamente a uma rede, como computadores e switches. Ela gerencia o acesso às redes de mídia compartilhada e detecta e corrige erros.</li>
+  <li>Camada de rede: Esta camada é responsável por rotear os pacotes de dados entre redes diferentes. Ela gerencia o endereçamento de rede e a divisão de pacotes.</li>
+  <li>Camada de transporte: Esta camada é responsável por garantir que os pacotes de dados sejam entregues de forma confiável entre dispositivos conectados a uma rede. Ela gerencia o controle de fluxo e a detecção de erros.</li>
+  <li>Camada de sessão: Esta camada é responsável por estabelecer, manter e encerrar sessões de comunicação entre dispositivos na rede. Ela gerencia a lógica de comunicação entre dispositivos, incluindo o estabelecimento de uma sessão, o fluxo de dados durante a sessão e o encerramento da sessão.</li>
+
+</ol> </p>
+<h3 class="titleContainerText">Visão geral da Arquitetura TCP/IP</h3>
+<p class="paragraphContainerText">
+  <br>A arquitetura TCP/IP (Transmission Control Protocol/Internet Protocol) é um conjunto de protocolos que governa a comunicação de dados na internet e em outras redes globais. Ela é composta por várias camadas, cada uma com uma função específica na comunicação de dados.
+
+<br> <br> A camada de rede (IP) é responsável por rotear os pacotes de dados entre redes diferentes. Ela gerencia o endereçamento de rede e a divisão de pacotes. O IP também é responsável por garantir que os pacotes cheguem ao seu destino final, mesmo que haja falhas no caminho.
+
+
+<br> <br> A camada de transporte (TCP) é responsável por garantir que os pacotes sejam entregues de forma confiável entre dispositivos conectados a uma rede. Ele gerencia o controle de fluxo e a detecção de erros, garantindo que os pacotes cheguem na ordem correta e sem erros.
+
+
+<br> <br> Além das camadas de rede e transporte, a arquitetura TCP/IP também inclui outras camadas, como a camada de aplicação, que é responsável por gerenciar a comunicação entre aplicativos e a rede, e a camada de host-to-host, que é responsável por garantir que os dispositivos possam se comunicar entre si.
+
+
+<br> <br> A arquitetura TCP/IP é independente do hardware e do sistema operacional e é amplamente utilizada em redes globais, como a internet, bem como em redes privadas, como redes corporativas e governamentais. Isso permite a interoperabilidade entre diferentes dispositivos e sistemas, permitindo que diferentes dispositivos e sistemas operacionais se comuniquem entre si.
+</p>
+<h3 class="titleContainerText">Endereçamento IPV4</h3>
+<p class="paragraphContainerText">
+  <br>O endereçamento IPV4 (Internet Protocol version 4) é o método utilizado para atribuir endereços de rede a dispositivos em uma rede usando o protocolo IP. Ele é composto por quatro números separados por pontos, cada um dos quais varia de 0 a 255.
+
+  <br><br>Um endereço IPV4 é composto por dois componentes: o endereço de rede e o endereço de host. O endereço de rede é usado para identificar a rede à qual o dispositivo está conectado, enquanto o endereço de host é usado para identificar o dispositivo específico dentro da rede.
+  
+  <br><br>Os endereços IPV4 são divididos em classes, como classe A, B e C. Cada classe tem um intervalo específico de endereços, e as regras para dividir os endereços em redes e hosts variam de acordo com a classe.
+  
+  <br><br> A classe A é reservada para redes de grande porte, como redes de provedores de internet. Ela é composta por endereços que começam com o número 1 a 127, e a primeira octeto é usado para identificar a rede, e os outros três octetos são usados para identificar os dispositivos dentro da rede.
+  
+  <br><br> A classe B é reservada para redes de médio porte, como redes de empresas. Ela é composta por endereços que começam com o número 128 a 191, e os dois primeiros octetos são usados para identificar a rede, e os outros dois octetos são usados para identificar os dispositivos dentro da rede.
+  
+  <br><br>A classe C é reservada para redes de pequeno porte, como redes de escolas e pequenas empresas. Ela é composta por endereços que começam com o número 192 a 223, e os três primeiros octetos são usados para identificar a rede, e o último octeto é usado para identificar os dispositivos dentro da rede.
+  
+  <br><br>É importante observar que o endereçamento IPV4 tem limites, o que leva ao uso do IPV6, com maior capacidade de endereçamento.
+</p>
+      </div>
     </div>
   </body>
 </html>
