--- a/pages/intermedioPage/segsistemas.html
+++ b/pages/intermedioPage/segsistemas.html
@@ -74,6 +74,91 @@
           </div>
         </div>
       </header>
+      <div class="containerText">
+        <h3 class="titleContainerText">Segurança de Sistemas</h3>
+        <p class="paragraphContainerText">
+          <strong>Introdução</strong> <br />
+          A segurança de sistemas é o conjunto de técnicas, ferramentas e
+          medidas utilizadas para proteger os sistemas de computação contra
+          ameaças externas e internas. A segurança de sistemas é essencial para
+          garantir a confidencialidade, a integridade e a disponibilidade dos
+          dados e dos recursos de computação.
+
+          <br />
+          <br />As ameaças à segurança de sistemas incluem ataques cibernéticos,
+          vírus, malware, exploração de vulnerabilidades, roubo de dados,
+          interrupção de serviços e outras formas de violação de segurança. Para
+          proteger os sistemas contra essas ameaças, os profissionais de
+          segurança de sistemas usam uma variedade de medidas de segurança,
+          incluindo criptografia, autenticação, autorização, monitoramento de
+          segurança, detecção de intrusos e resposta a incidentes.
+
+          <br />
+          <br />A segurança de sistemas é uma disciplina em constante evolução,
+          pois as ameaças e as tecnologias de segurança estão sempre mudando.
+          Por isso, é importante manter-se atualizado com as últimas tendências
+          e práticas de segurança para garantir a proteção adequada dos
+          sistemas. Além disso, é importante implementar políticas e
+          procedimentos de segurança para garantir que os usuários e os
+          administradores de sistemas estejam cientes das responsabilidades e
+          das melhores práticas de segurança.
+        </p>
+        <h3 class="titleContainerText">Informação</h3>
+        <p class="paragraphContainerText">
+          <strong>Conceito</strong> <br />
+          Informação é um conjunto de dados que são organizados e significativos
+          para alguém. Pode ser qualquer coisa, desde texto, imagens, áudio,
+          vídeo, dados estatísticos, entre outros. A informação é geralmente
+          codificada de alguma forma, como por exemplo, em linguagem natural,
+          código binário, linguagem de programação, entre outros. A informação é
+          a base para a comunicação, a tomada de decisão, a aprendizagem, a
+          pesquisa e a criação de conhecimento.
+
+          <br />
+          <br />A Informação é valiosa pois permite que as pessoas tomem
+          decisões informadas e melhorem sua eficiência e eficácia. A informação
+          também permite que as pessoas compreendam melhor o mundo ao seu redor
+          e se adaptem a mudanças. No mundo atual, a informação é amplamente
+          disponível através de meios digitais, como a internet, e é facilmente
+          acessível a quase todos. Acesso à informação correta e precisa é
+          crucial para o sucesso em muitas áreas, incluindo negócios, educação,
+          saúde e governo. <br />
+          <strong>Segurança da Informação</strong> <br />
+          A segurança da informação é o conjunto de medidas e técnicas
+          utilizadas para proteger a informação contra ameaças externas e
+          internas. Essas ameaças podem incluir ataques cibernéticos, roubo de
+          dados, vazamento de informações confidenciais, interrupção de serviços
+          e outras formas de violação de segurança. A segurança da informação é
+          importante para garantir a confidencialidade, a integridade e a
+          disponibilidade da informação.
+
+          <br />
+          <br />A segurança da informação é uma disciplina multidisciplinar que
+          envolve várias áreas, incluindo criptografia, autenticação,
+          autorização, monitoramento de segurança, detecção de intrusos e
+          resposta a incidentes. Ela também envolve a implementação de políticas
+          e procedimentos de segurança para garantir que os usuários e
+          administradores de sistemas estejam cientes das responsabilidades e
+          das melhores práticas de segurança.
+
+          <br />
+          <br />A segurança da informação é crucial para organizações de todos
+          os setores, pois a perda de informações confidenciais pode ter
+          consequências graves, incluindo danos financeiros, danos à reputação e
+          até mesmo violações de regulamentos e leis. Por isso, é importante que
+          as organizações implementem medidas de segurança da informação para
+          proteger suas informações valiosas e garantir a continuidade dos
+          negócios.
+          <br />
+          <strong>Os 3 pilares da Segurança da Informação</strong> <br> 
+          Os três principais princípios da segurança da informação são: confidencialidade, integridade e disponibilidade. <br> 
+          <ol>
+            <li>Confidencialidade: Este princípio garante que a informação só seja acessada por pessoas autorizadas. Isso é geralmente alcançado através de medidas de segurança, como criptografia e autenticação de usuários.</li>
+            <li>Integridade: Este princípio garante que a informação não seja alterada ou modificada sem autorização. Isso é geralmente alcançado através de medidas de segurança, como assinaturas digitais e mecanismos de detecção de intrusos.</li>
+            <li>Disponibilidade: Este princípio garante que a informação esteja sempre disponível para usuários autorizados quando necessário. Isso é geralmente alcançado através de medidas de segurança, como backups regulares e alta disponibilidade.</li>
+          </ol>
+        </p>
+      </div>
     </div>
   </body>
 </html>
