--- a/pages/intermedioPage/so.html
+++ b/pages/intermedioPage/so.html
@@ -74,6 +74,72 @@
           </div>
         </div>
       </header>
+      <div class="containerText">
+        <h3 class="titleContainerText">Sistemas Operacionais</h3>
+        <p class="paragraphContainerText">
+          <strong>Introdução</strong> <br />
+          Os sistemas operacionais são programas que gerencia o hardware e o
+          software de um computador. Eles fornecem uma interface entre o
+          usuário, o aplicativo e o hardware do computador, permitindo que os
+          usuários interajam com o computador e executem tarefas. Além disso, os
+          sistemas operacionais também gerenciam recursos do computador, como
+          memória, armazenamento, processamento e dispositivos de entrada/saída.
+        </p>
+        <h3 class="titleContainerText">Comunicação Paralela</h3>
+        <p class="paragraphContainerText">
+          <strong>Tipos de porta paralela</strong> <br />Na comunicação paralela, as portas são utilizadas para conectar dispositivos de entrada/saída, como impressoras e scanners, ao computador. Existem vários tipos de portas paralelas, cada uma com características e usos específicos. Alguns dos principais tipos de portas paralelas incluem: <br>
+          <ul>
+            <li>Porta paralela Centronics: Esta é a porta paralela original, desenvolvida pela empresa Centronics. Ele é compatível com a maioria das impressoras antigas e é geralmente encontrado como uma porta DB-25 (25 pinos).</li>
+            <li>Porta paralela IEEE 1284: Esta é uma versão atualizada da porta paralela que é mais rápida e mais flexível do que a porta Centronics. Ele é geralmente encontrado como uma porta DB-25 ou DB-36 (36 pinos).</li>
+            <li>Porta paralela USB: Esta é uma porta paralela que usa o padrão USB (Universal Serial Bus) para conectar dispositivos. Ele permite que os dispositivos sejam conectados e desconectados facilmente e é compatível com a maioria dos sistemas operacionais modernos.</li>
+            <li>Porta paralela FireWire: Esta é uma porta paralela que usa o padrão FireWire para conectar dispositivos. Ele é similar ao USB, mas é mais rápido e é usado principalmente em dispositivos de alta velocidade, como câmeras de vídeo e discos rígidos.</li>
+            <li>Porta paralela Ethernet: Esta é uma porta paralela que usa o padrão Ethernet para conectar dispositivos. Ela permite a comunicação de dados em alta velocidade e é usada para conectar dispositivos de rede, como computadores e roteadores.</li>
+          </ul>
+        </p>
+        <h3 class="titleContainerText">Transmissões de Dados</h3>
+     <br>   <p class="paragraphContainerText">
+          Existem vários tipos de transmissões de dados nos sistemas operacionais, cada um com suas próprias características e usos específicos. Alguns dos principais tipos de transmissões de dados incluem: <br>
+        <ul>
+          <li>Transmissão síncrona: Nesta modalidade, a transmissão de dados é sincronizada com o relógio do dispositivo transmissor. Isso significa que os dados são transmitidos em intervalos regulares, garantindo que o dispositivo receptor esteja preparado para recebê-los.</li>
+          <li>Transmissão assíncrona: Nesta modalidade, a transmissão de dados não é sincronizada com o relógio do dispositivo transmissor. Isso significa que os dados são transmitidos sem um intervalo regular, e o dispositivo receptor deve ser capaz de lidar com a chegada de dados em qualquer momento.</li>
+          <li>Transmissão por pacotes: Nesta modalidade, os dados são divididos em pacotes antes de serem transmitidos. Cada pacote contém informações de endereçamento e de controle de erro para garantir a entrega correta dos dados.</li>
+          <li>Transmissão em tempo real: Nesta modalidade, os dados são transmitidos e processados em tempo real, sem atrasos significativos. Isso é importante para aplicações que requerem respostas rápidas, como sistemas de controle industrial e de automação.</li>
+          <li>Transmissão de fluxo contínuo: Nesta modalidade, os dados são transmitidos continuamente, sem interrupções. Isso é usado em aplicações que requerem transmissão contínua de dados, como streaming de vídeo e áudio.</li>
+
+        </ul>        </p>
+        <h3 class="titleContainerText">Transmissões simplex, half-duplex e full-duplex</h3>
+       <br> <p class="paragraphContainerText">As transmissões simplex, half-duplex e full-duplex são diferentes modos de transmissão de dados que determinam como os dispositivos podem enviar e receber dados. <br>
+        <ul>
+          <li>Transmissão simplex: Nesta modalidade, os dados só podem ser transmitidos em uma única direção. Isso significa que um dispositivo pode enviar dados para outro dispositivo, mas não pode receber dados de volta. É usado principalmente em aplicações de transmissão de dados, como rádio e televisão.</li>
+          <li>Half-duplex: Nesta modalidade, os dispositivos podem enviar e receber dados, mas não podem fazê-lo ao mesmo tempo. Isso significa que um dispositivo deve aguardar a transmissão ser concluída antes de começar a enviar sua própria transmissão. Ele é usado em comunicação como rádio amador e walkie-talkie.</li>
+          <li>Full-duplex: Nesta modalidade, os dispositivos podem enviar e receber dados ao mesmo tempo. Isso significa que os dispositivos podem se comunicar simultaneamente, sem esperar a transmissão do outro dispositivo ser concluída. É usado em comunicação como telefonia e redes de computadores.</li>
+        </ul></p>
+        <h3 class="titleContainerText">Números Binários</h3>
+        <p class="paragraphContainerText">
+          <strong>Como fazer a conversão desses números:</strong> <br>
+          Para converter um número binário para decimal, é necessário calcular o valor de cada bit (dígito binário) elevado à potência correspondente da sua posição. A posição mais à direita tem valor 0, a próxima posição à esquerda tem valor 1, e assim por diante. Então, o número binário 1011 se tornaria 1* 2^3 + 0* 2^2 + 1* 2^1 + 1* 2^0 = 8 + 0 + 2 + 1 = 11.
+
+<br> <br>Para converter um número decimal para binário, é necessário dividir o número decimal sucessivamente pelo número 2 e anotar o resto da divisão até que o quociente seja zero. Em seguida, os restos obtidos são lidos de baixo para cima, formando o número binário correspondente. Então, o número decimal 11 se tornaria 1011 em binário.
+
+<br> <br>É importante lembrar que os computadores trabalham com números binários, e a conversão de binário para decimal e vice-versa é uma operação básica para a compreensão e interação com os sistemas digitais.
+<h3 class="titleContainerText">Números Hexadecimais</h3>
+<p class="paragraphContainerText">
+  <br>
+  Os números hexadecimais são formados por dígitos de 0 a 9 e letras de A a F e são usados ​​comumente em sistemas digitais para representar valores maiores do que os que podem ser representados com apenas dígitos binários.
+
+<br> <br>Para converter um número hexadecimal para decimal, é necessário calcular o valor de cada dígito elevado à potência correspondente da sua posição. A posição mais à direita tem valor 0, a próxima posição à esquerda tem valor 1, e assim por diante. Então, o número hexadecimal A4F se tornaria 1016^2 + 416^1 + 15*16^0 = 2560 + 64 + 15 = 2639.
+
+<br> <br>Para converter um número decimal para hexadecimal, é necessário dividir o número decimal sucessivamente pelo número 16 e anotar o resto da divisão até que o quociente seja zero. Em seguida, os restos obtidos são lidos de baixo para cima e convertidos em seus equivalentes hexadecimais (de 0 a 9 e A a F), formando o número hexadecimal correspondente. Então, o número decimal 2639 se tornaria A4F em hexadecimal.
+
+
+
+
+</p>
+
+
+
+        </p>
+      </div>
     </div>
   </body>
 </html>
